<?xml version="1.0" encoding="UTF-8"?>

<android.support.constraint.ConstraintLayout tools:context=".MainActivity" android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="9" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_startend"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:text="@string/tr_start" />

            <Button
                android:id="@+id/btn_post"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:text="@string/tr_memostart" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:text="@string/tr_save" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noclickView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C8000000"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <LinearLayout
        android:id="@+id/dlog_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="54dp"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#F2526E"
            android:gravity="center"
            android:text="@string/tr_memo_memo"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/dlog_iv"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/prioritytext3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/tr_memo_kategorie" />

        <RadioGroup
            android:id="@+id/memo_select"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:checkedButton="@+id/priority1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/priority1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_prioty1" />

            <RadioButton
                android:id="@+id/priority2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_prioty2" />

            <RadioButton
                android:id="@+id/priority3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_prioty3" />

            <RadioButton
                android:id="@+id/priority4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_prioty4" />

        </RadioGroup>

        <TextView
            android:id="@+id/name3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/tr_memo_title" />

        <EditText
            android:id="@+id/nameedit3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:ems="10"
            android:hint="@string/tr_memo_titlehint"
            android:inputType="text" />

        <TextView
            android:id="@+id/memo3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/tr_memo_content" />

        <EditText
            android:id="@+id/memoedit3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/tr_memo_contenthint"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="100">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="#F2526E"
                android:text="@string/tr_memo_savebtn"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="#000000"
                android:text="@string/tr_memo_cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>