<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/ll_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_mapStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#F1F1F1"
                android:hint="@string/search_map_start"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textColorHint="#6B6B6B"
                android:textColorLink="#fe489f" />

            <EditText
                android:id="@+id/et_mapEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="#F1F1F1"
                android:hint="@string/search_map_end"
                android:textColorHint="#666666"
                android:textColorLink="#fe489f" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_call"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="2"
            android:background="@drawable/button_black"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#A3A3A3" />

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/search_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/all"
            tools:visibility="gone"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/search_subbus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/subbus"
            tools:visibility="gone"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/search_bus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/bus"
            tools:visibility="gone"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/search_subway"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/subway"
            tools:visibility="gone"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#A3A3A3" />

    <ListView
        android:id="@+id/maplist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:text="powered by www.ODsay.com"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/noresult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/noresult"
        android:visibility="gone" />

</LinearLayout>
