<?xml version="1.0" encoding="UTF-8"?>

    <android.support.constraint.ConstraintLayout tools:context=".MainActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        />


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <fragment
            android:id="@+id/result_map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="9" />

        <Button
            android:id="@+id/btn_memolist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#F2526E"
            android:text="@string/tri_seememolist"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/re_memolist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ListView
            android:id="@+id/re_memolistd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

        </ListView>

        <Button
            android:id="@+id/btn_mapview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#3F3F3F"
            android:text="@string/tri_seemap"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noclickVi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C8000000"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="54dp"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:overScrollMode="always"
        android:id="@+id/memo_meaning"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tr_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tr_tvcate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="카테고리"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/tr_iv"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:paddingTop="20dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/tr_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:fadeScrollbars="true"
                    android:gravity="right"
                    android:isScrollContainer="false"
                    android:overScrollMode="always"
                    android:paddingTop="20dp"
                    android:text="날짜"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tr_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:fadeScrollbars="true"
                        android:isScrollContainer="false"
                        android:overScrollMode="always"
                        android:paddingTop="20dp"
                        android:text="내용"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:weightSum="6">

            <Button
                android:id="@+id/btn_insert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tri_insert" />

            <Button
                android:id="@+id/btn_del"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tri_delete" />

            <Button
                android:id="@+id/btn_cencel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tr_memo_cancel" />
        </LinearLayout>

    </LinearLayout>

    <!--  여기 아래부터 수정 -->

    <LinearLayout
        android:id="@+id/tri_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="54dp"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/tr_memo_memo"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/tri_iv"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/prioritytext3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/tr_memo_kategorie" />

        <RadioGroup
            android:id="@+id/tri_select"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:checkedButton="@+id/priority1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tri_s1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_prioty1" />

            <RadioButton
                android:id="@+id/tri_s2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_prioty2" />

            <RadioButton
                android:id="@+id/tri_s3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_prioty3" />

            <RadioButton
                android:id="@+id/tri_s4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_prioty4" />

        </RadioGroup>

        <TextView
            android:id="@+id/name3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/tr_memo_title" />

        <EditText
            android:id="@+id/tri_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:ems="10"
            android:hint="@string/tr_memo_titlehint"
            android:inputType="text" />

        <TextView
            android:id="@+id/memo3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/tr_memo_content" />

        <EditText
            android:id="@+id/tri_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/tr_memo_contenthint"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="100">

            <Button
                android:id="@+id/tribtn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/tri_insert" />

            <Button
                android:id="@+id/tribtn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/tr_memo_cancel" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>